# neotube

./: .gitignore  AGENTS.md  GEOMETRY.md  LICENSE  README.md  TESTING.md  admissable_region.docx  print_obs_and_resid.py  pyproject.toml  replicas.csv  replicas_meta.json
data/: site_overrides.json
deprecated/: README.md  check_sites.py  diagnose_jacfail.py  pick_ceres_epoch.py  wise_astrometry_diagnose.py
deprecated/runs/ceres-ground-test/: fit_smc_ckpt.npz  fit_smc_ckpt_init.npz  fit_smc_ckpt_init_condonly_diag.npz  fit_smc_ckpt_init_condonly_diag3.npz  replicas.csv  (+28 more)
deprecated/scripts/: compare_jpl_posterior.py  compare_path_a_b.py  compute_site_bias.py  debug_compare_pca_jpl.py  diagnostics_obs123.py  finalize_replicas.py  plot_pca_distance.py  shift_z22_times.py  test_adaptive_cloud.py  test_geom_validator_paths.py  test_geometry_q1.py  test_numba_accel.py  test_proposal_with_jpl.py  validate_replica_cloud.py
docs/: ceres_most_ztf.md  ~$missable_region.docx
runs/apophis/: obs.csv
runs/ceres/: compare_ab_per_site.csv  compare_ab_summary.txt  fit_smc_ckpt_v2.npz  fit_smc_ckpt_v2_obs003.npz  fit_smc_ckpt_v2_obs004.npz  fit_smc_ckpt_v2_obs005.npz  fit_smc_ckpt_v2_obs007.npz  fit_smc_ckpt_v2_obs009.npz  jpl_dump.csv  obs.csv  replicas_smc.csv  replicas_smc.err  replicas_smc_debug.out  replicas_smc_v2.out  replicas_smc_v2_single.out
runs/ceres-ground-test/: debug_nullspace.csv  fit_smc_ckpt.npz  geom_validator_out.csv  geom_validator_q45.csv  obs.csv  obs_no_b50.csv  obs_z22_shifted.csv  per_obs_diag.csv  per_obs_diag_shifted.csv  replicas_smc.out  replicas_smc_debug_resample.csv
scripts/: compare_checkpoint_vs_smc.py  debug_pred_compare.py  diagnose_geocentric.py  diagnose_jpl_diff.py  fit_diagnostics.py  geom_validator_cached_polite.py  hybrid_sampler_neotube.py  plot_geom_residuals.py  plot_geom_validator_residuals.py  plot_pca_distance.py  replica_forensics.py  replica_spread.py  run_fit_debug.py  site_resid_summary.py  site_time_bias.py  test_fit_fast_paths.py  test_propagate_frame_fast.py  test_proposals_from_obs_csv.py  validate_replica_cloud.py
src/neotube/: __init__.py  admissible_seed.py  cli.py  constants.py  diag_cli.py  diag_overlay_cli.py  fit.py  fit_adapt.py  fit_cli.py  fit_smc.py  geometry.py  horizons.py  infer.py  models.py  mpc_obs_cli.py  observatory_entry.py  plan_cli.py  propagate.py  propcloud_cli.py  ranging.py  replica_cli.py  resample.py  resample_cli.py  rng.py  sbdb.py  site_checks.py  site_kind.py  sites.py  three_pt_exact.py  tube.py  tube_cli.py
(+181 files in other folders)
