[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neotube"
version = "0.1.0"
description = "Toolkit for polite ZTF data harvesting and eventual NEOTube planning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "numpy>=1.26",
  "scipy>=1.11",
  "astropy>=6.0",
  "astroquery>=0.4.6",
  "matplotlib>=3.8",
]

[project.scripts]
neotube-fit = "neotube.fit_cli:main"
neotube-replicas = "neotube.replica_cli:main"
neotube-propcloud = "neotube.propcloud_cli:main"
neotube-tube = "neotube.tube_cli:main"
neotube-ztf = "neotube.cli:main"
neotube-plan = "neotube.plan_cli:main"
neotube-diag = "neotube.diag_cli:main"
neotube-diag-overlay = "neotube.diag_overlay_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
